--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>testing</title>
+  <title>testing</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script src="js/main.js"></script>
 </head>
 <body>
 
-<h1>hello world</h1>
+  <h1>hello world</h1>
 
 
 
