--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>testing</title>
+  <title>Wolfmaster Codes</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="js/main.js"></script>
 </head>
 <body>
 
-  <h1>hello world</h1>
+  <h1 id="Title">Wolfmaster Codes</h1>
 
 
 
