--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-
+  <ul>
+   <li><a>Test Page</a></li> 
+  </ul>
   <h1 id="Title">Wolfmaster Codes</h1>
 
 
