--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <ul>
+  <ul id="nav">
    <li><a href="pages/test.html">Test Page</a></li> 
   </ul>
   <h1 id="Title">Wolfmaster Codes</h1>
