--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <ul id="nav">
-   <li id="test"><a href="pages/test.html">Test Page</a></li> 
+   <li id="test"><a id="test" href="pages/test.html">Test Page</a></li> 
   </ul>
   <h1 id="Title">Wolfmaster Codes</h1>
 
