--- a/pages/test.html
+++ b/pages/test.html
@@ -5,7 +5,10 @@
 <html>
 <body>
 
-
+<ul id="nav">
+   <li id="test"><a id="test" href="../index.html">Test Page</a></li> 
+   <li id="test"><a id="test" href="pages/test.html">Test Page</a></li> 
+  </ul>
 
 
 
