--- a/pages/test.html
+++ b/pages/test.html
@@ -7,7 +7,7 @@
 
 <ul id="nav">
    <li id="test"><a id="test" href="../index.html">Home</a></li> 
-   <li id="test"><a id="test" href="pages/test.html">Test Page</a></li> 
+   <li id="test">Test Page</a></li> 
   </ul>
 
 
