--- a/pages/test.html
+++ b/pages/test.html
@@ -6,7 +6,7 @@
 <body>
 
 <ul id="nav">
-   <li id="test"><a id="test" href="../index.html">Home</a></li> 
+   <li id="test"><a id="test" href="Wolfmaster30306.github.io">Home</a></li> 
    <li id="test">Test Page</li> 
   </ul>
 
