--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <ul id="nav">
    <li id="test">Home</li> 
-   <li id="test"><a id="test" href="pages/test.html">Test Page</a></li> 
+   <li id="test"><a id="test" href="test.html">Test Page</a></li> 
   </ul>
   <h1 id="Title">Wolfmaster Codes</h1>
 
