--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <ul id="nav">
-   <li id="test">Home</li> 
-   <li id="test"><a id="test" href="test.html">Test Page</a></li> 
-  </ul>
+  <ul class="topnav">
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li class="right"><a href="#about">About</a></li>
+</ul>
   <h1 id="Title">Wolfmaster Codes</h1>
   <p>text</p>
 
