--- a/test.html
+++ b/test.html
@@ -5,11 +5,12 @@
 <html>
 <body>
 
-<ul id="nav">
-   <li id="test"><a id="test" href="Wolfmaster30306.github.io">Home</a></li> 
-   <li id="test">Test Page</li> 
-  </ul>
-
+<ul class="topnav">
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li class="right"><a href="#about">About</a></li>
+</ul>
 
 
 
