--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <ul class="topnav">
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a class="active" href="">Home</a></li>
+  <li><a href="test.html">test</a></li>
   <li><a href="#contact">Contact</a></li>
-  <li class="right"><a href="#about">About</a></li>
+  <li><a href="#about">About</a></li>
 </ul>
 
 
