--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
 <body>
 
 <ul class="topnav">
-  <li><a href="#home">Home</a></li>
-  <li><a class="active" href="#news">News</a></li>
+  <li><a href="https://wolfmaster30306.github.io">Home</a></li>
+  <li><a class="active" href="">Test</a></li>
   <li><a href="#contact">Contact</a></li>
   <li class="right"><a href="#about">About</a></li>
 </ul>
