--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <h1 id="Title">Wolfmaster Codes</h1>
   <button id="demo" type="button">Click Me!</button>
-  <p>text</p>
+  <p id="demo">text</p>
 
 
 
