--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
 
   <h1 id="Title">Wolfmaster Codes</h1>
-  <button id="demo" type="button">Click Me!</button>
   <p id="demo">text</p>
-
-
+  <input type="text" id="myText" value="Some text...">
+  <button onclick="myFunction()">Try it</button>
 
 
 </body>
