--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1 id="Title">Wolfmaster Codes</h1>
   <p>eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
   <input type="text" id="myText" value="Some text...">
-  <button onclick="myFunction()">Try it</button>
+  <button onclick="js/main.js">Try it</button>
   <script src="js/main.js"></script>
 
 </body>
